--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,22 @@ body {
     min-height: 100vh;
     justify-content: flex-start;
 }
-header, footer, .hero-section, .info-cards{
+
+header,
+footer,
+.hero-section,
+.info-cards {
     padding-left: 150px;
     padding-right: 150px;
 }
-header, 
-footer{
+
+header,
+footer {
     color: white;
     background-color: #1F2937;
 }
-.hero-section{
+
+.hero-section {
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #1F2937;
@@ -22,21 +28,25 @@ footer{
     justify-content: space-between;
     gap: 10px;
 }
-.hero-card{
+
+.hero-card {
     min-width: 350px;
 }
-.hero-card h4{
+
+.hero-card h4 {
     font-size: 48px;
     font-weight: bolder;
     color: #f9faf8;
     margin-bottom: 10px;
 }
-.hero-card p{
+
+.hero-card p {
     font-size: 18px;
     color: #f9faf8;
     line-height: 25px;
 }
-.hero-card button{
+
+.hero-card button {
     background-color: #3882F6;
     color: #f9faf8;
     padding: 5px;
@@ -45,6 +55,7 @@ footer{
     padding: 5px 20px;
 
 }
+
 .hero-image {
     height: 250px;
     width: 500px;
@@ -60,50 +71,56 @@ footer{
     padding-top: 10px;
     padding-bottom: 10px;
 }
-.nav-left{
+
+.nav-left {
     font-size: 24px;
     color: #f9faf8;
 }
-.nav-right{
+
+.nav-right {
     display: flex;
 }
+
 ul {
     /* display: flex; */
     list-style-type: none;
     gap: 10px;
 }
-a{
+
+a {
     color: white;
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     text-decoration: underline;
 }
-
-.info-section h4{
+.info-header {
     text-align: center;
     margin: 50px;
 }
-.info-cards{
+
+.info-cards {
     display: flex;
-    gap: 150px;
-    justify-content: center;
-    margin: 25px;
     flex-wrap: wrap;
-    min-width: 750px;
-}   
-.info-card{
-    border: 1px solid blue;
-    width: 150px;
-    height: 150px;
-    text-align: center;
-    flex-shrink: 0;    
+    justify-content: space-evenly;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+
+.info-card {
+    display: flex;
+    flex-direction: column;
 }
 .info-card img{
-    height: 100px;
-    width: 150px;
-    background-color: green;
+    width:100%;
+
 }
+.info-card p {
+    text-align: center;
+}
+
+
 
 footer {
     height: 72px;
@@ -114,4 +131,3 @@ footer {
     justify-content: center;
     margin-top: auto;
 }
-
