--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@ body {
 
 header,
 footer,
-.hero-section,
-.info-cards {
+.hero-section {
     padding-left: 150px;
     padding-right: 150px;
 }
@@ -95,27 +94,33 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
 .info-header {
     text-align: center;
+    min-width: 1050px;
     margin: 50px;
 }
 
 .info-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 20px;
-    margin-bottom: 100px;
+    justify-content: center;
+    min-width: 1050px;
 }
 
 .info-card {
-    display: flex;
-    flex-direction: column;
+    flex: 0 0 20%;
+    margin: 5px;
+    /* min-width: 350px; */
 }
-.info-card img{
-    width:100%;
 
+.image-container {}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
 }
+
 .info-card p {
     text-align: center;
 }
@@ -131,3 +136,21 @@ footer {
     justify-content: center;
     margin-top: auto;
 }
+@media only screen and (max-width: 1500px) {
+    .info-card {
+        flex: 0 0 25%;
+        margin: 5px;
+    }
+}
+@media only screen and (max-width: 1400px) {
+    .info-card {
+        flex: 0 0 33%;
+        margin: 5px;
+    }
+}
+/* @media only screen and (max-width: 900px) {
+    .info-card {
+        flex: 0 0 90%;
+        margin: 5px;
+    }
+} */
